Bug 112733 - Pivot table is displayed wrong in Excel after saved in LO Calc
Summary: Pivot table is displayed wrong in Excel after saved in LO Calc
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Tamás Zolnai
URL:
Whiteboard: target:6.0.0
Keywords:
Depends on:
Blocks: Pivot-Table-XLSX
  Show dependency treegraph
 
Reported: 2017-09-28 21:15 UTC by Tamás Zolnai
Modified: 2017-10-07 13:14 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tamás Zolnai 2017-09-28 21:15:21 UTC
Description:
Using attachment 134539 [details] from bug 109016. I save it into an XLSX file with LO Calc, then Excel opens it without displaying a pivot table filtering button on A3 Cell.

Steps to Reproduce:
1. Open attachment 134539 [details] in Calc
2. Save it to an XLSX file
3. Open the saved file in Excel

Actual Results:  
Filtering button is not displayed in Excel.

Expected Results:
Button should be displayed on A3 cell.


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 6.3; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/61.0.3163.100 Safari/537.36
Comment 1 Commit Notification 2017-09-30 10:51:24 UTC
Tamás Zolnai committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9e81e845d8299f117e96c30e8b40fcf602e9ca2c

tdf#112733: Pivot table is displayed wrong in Excel after saved in LO Calc

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.